fix: correct recipe logo overlap on small screens

--- a/Foundations/04-HTML-Foundations/08-Project-Recipes/AttemptTwo/css/style.css
+++ b/Foundations/04-HTML-Foundations/08-Project-Recipes/AttemptTwo/css/style.css
@@ -172,7 +172,7 @@ a {
 
 @media (max-width: 800px) {
     .landing {
-        height: 40vh;
+        height: 45vh;
     }
     .about img {
         float: none;
